overflow fix

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: calc(100% - 70px);
     overflow-y: scroll;
+    overflow-x: hidden;
     align-items: center;
 }
 
