--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: calc(100% - 70px);
     overflow-y: scroll;
+    overflow-x: hidden;
     align-items: center;
 }
 
