--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -6,6 +6,7 @@
     height: calc(100% - 70px);
     width: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
     align-items: center;
     flex-direction: column;
 }
